syntax = "proto3";

option go_package = ".;kvserver";

service KVServer {
    rpc OpenSession (OpenSessionRequest) returns (OpenSessionReply);
    rpc Get (GetRequest) returns (GetReply);
    rpc Update (UpdateRequest) returns (UpdateReply);
}

enum ErrCode {
    WRONG_LEADER = 0;
    OK = 1;
    NO_KEY = 2;
    INVALID_SESSION = 3;
    INVALID_OP = 4;
    INVALID_PASSWORD = 5;
}

enum Op {
    PUT = 0;
    APPEND = 1;
    DELETE = 2;
}

message OpenSessionRequest {
    string password = 1;
}

message OpenSessionReply {
    string session_id = 1;
    ErrCode err_code = 2;
}

message UpdateRequest {
    string key = 1;
    string value = 2;
    Op op = 3;               // "Put" or "Append" or "Delete"
    string session_id = 4;
}

message UpdateReply {
    ErrCode err_code = 1;
}

message GetRequest {
    string key = 1;
    string session_id = 2;
}

message GetReply {
    string value = 1;
    ErrCode err_code = 2;
}

